[gd_scene load_steps=7 format=3 uid="uid://x7vw613v3na3"]

[ext_resource type="Script" path="res://Plants/Sunflower/Sunflower.gd" id="1_otpd4"]
[ext_resource type="Texture2D" uid="uid://7jfp5o2w4m70" path="res://Plants/Sunflower/DS DSi - Plants vs Zombies - Sunflower.png" id="2_ipchx"]

[sub_resource type="Animation" id="Animation_x3igt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0o3tn"]
resource_name = "idling"
length = 1.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsxhx"]
_data = {
"RESET": SubResource("Animation_x3igt"),
"idling": SubResource("Animation_0o3tn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d35j5"]
size = Vector2(27.5, 29)

[node name="Sunflower" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_otpd4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ipchx")
hframes = 8
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idling"
libraries = {
"": SubResource("AnimationLibrary_fsxhx")
}

[node name="PlantBody" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlantBody"]
position = Vector2(0.25, 1.5)
shape = SubResource("RectangleShape2D_d35j5")

[node name="SunflowerTimer" type="Timer" parent="."]

[connection signal="area_entered" from="PlantBody" to="." method="_on_plant_body_area_entered"]
[connection signal="timeout" from="SunflowerTimer" to="." method="_on_sunflower_timer_timeout"]
